<resources>
    <string name="font_open_sans" translatable="false">opensans.ttf</string>
    <string name="font_open_sans_italic" translatable="false">openSansItalic.ttf</string>
    <string name="font_open_sans_bold" translatable="false">openSansBold.ttf</string>
    <string name="font_times_new_roman" translatable="false">TimesNewRoman.ttf</string>
    <string name="abmod_app_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="facebook_app_id" translatable="false">1628004524169901</string>
    <string name="app_name">PopMovies</string>
    <string name="poster_movie" translatable="false">poster_movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_mais">More ></string>
    <string name="less">Read less..</string>
    <string name="more">Read more..</string>
    <string name="image_picker_title">Select the image source:</string>
    <string name="pop_movie_subtitle_principal">Choice yours favorite movies.</string>
    <string name="movie_action_add_favourite">Add to Favorites</string>
    <string name="progress_wait">Wait a moment..</string>
    <string name="tentar_novamente">Try Again</string>
    <string name="nao_disponivel">Not available.</string>
    <string name="loading">Loading...</string>
    <string name="no_movies_find">No movie found</string>
    <string name="no_person_find">No person found</string>
    <string name="error_no_internet">No conection</string>
    <string name="imagens_error_load">Error when loading images</string>
    <string name="videos_error_load">Error when loading videos</string>
    <string name="error_no_server">Server error</string>
    <string name="genre_error_network">Error when loading genres</string>
    <string name="erro_unexpected">Unexpected Error</string>
    <string name="error_save_movie">Error while saving movie</string>
    <string name="error_loading_background">Error while saving background image</string>
    <string name="login_facebook_cancelled">Facebook login cancelled</string>
    <string name="login_facebook_error">Error in facebook login</string>
    <string name="login_twitter_error">Error in Twitter login</string>
    <string name="error_permission_save">If you want to save images in your phone, you must authorize the App to do so</string>
    <string name="error_rankings">Error to get IMDB and Tomatoes rate</string>
    <string name="login_google_error">Error in Google login</string>
    <string name="invalid_custom_token">Erro inesperado, entre em contato ou tente novamente.</string>
    <string name="token_mismatch">Erro inesperado, entre em contato ou tente novamente.</string>
    <string name="invalid_credential">Credenciais Expiradas ou mal formatadas, tente novamente.</string>
    <string name="invalid_email">Email incorreto, tente novamente.</string>
    <string name="wrong_password">Senha inválida ou o usuário não possui uma senha.</string>
    <string name="user_mismatch">Credenciais incorretas, tente novamente.</string>
    <string name="requires_recent_login">Operação inválida, por favor faça login novamente.</string>
    <string name="account_exists_diff_credential">Conta já existente utilizando outra forma de se Credenciar, tente novamente da forma correta.</string>
    <string name="email_already_in_use">Email já em uso.</string>
    <string name="credential_already_in_use">Credenciais já existente, tente novamente de outra forma.</string>
    <string name="user_disable">Usuário desativado. Entre em contato.</string>
    <string name="user_token_expired">Credenciais inválidas, faça login novamente.</string>
    <string name="user_not_found">Usuário não encontrado, tente novamente ou se cadastre.</string>
    <string name="invalid_user_token">Credenciais inválidas, tente novamente ou se cadastre</string>
    <string name="operation_not_allowed">Erro inesperado, entre em contato ou tente novamente.</string>
    <string name="weak_password">Senha muito fraca (Pelo menos 6 carácteres).</string>
    <string name="sucess_save_movie">Movie saved</string>
    <string name="sucess_data_saved">Data saved</string>
    <string name="sucess_image_saved">Image saved</string>
    <string name="sucess_delete_movie">Movie deleted</string>
    <string name="action_opcoes">Options</string>
    <string name="action_procurar">Search</string>
    <string name="menu_sobre">About</string>
    <string name="action_save">Save</string>
    <string name="action_recarregar">Update</string>
    <string name="menu_sair">Exit</string>
    <string name="menu_configuracoes">Settings</string>
    <string name="menu_assistidos">Watched</string>
    <string name="menu_atores">Actors</string>
    <string name="menu_home">Home</string>
    <string name="menu_compartilhar">Share</string>
    <string name="action_go_gallery">Go to gallery</string>
    <string name="menu_open_navegador">Open in browser</string>
    <string name="idioma_portugues">Portuguese</string>
    <string name="idioma_ingles">English</string>
    <string name="idioma_espanhol">Spanish</string>
    <string name="menu_perfil">Profile</string>
    <string name="tab_populares">Popular</string>
    <string name="tab_favoritos">Favorites</string>
    <string name="tab_lancamentos">Releases</string>
    <string name="tab_midia">Media</string>
    <string name="imdb">IMDB</string>
    <string name="wiki">Wiki</string>
    <string name="filmow">Filmow</string>
    <string name="pagina_inicial">Homepage</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_no_thanks">No, thank you</string>
    <string name="btn_aplicar">Apply</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_nenhum">None</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="metascore">Metascore</string>
    <string name="google_play">Google Play</string>
    <string name="netflix">Netflix</string>
    <string name="amazon">Amazon</string>
    <string name="facebook_link" translatable="false">https://www.facebook.com/%1$s</string>
    <string name="facebook_photo" translatable="false">https://graph.facebook.com/%1$s/picture?type=large</string>
    <string name="twitter_link_uri" translatable="false">twitter://user?screen_name=%1$s</string>
    <string name="instagram_link_uri" translatable="false">https://instagram.com/_u/%1$s</string>
    <string name="twitter_link" translatable="false">https://twitter.com/#!/%1$s</string>
    <string name="instagram_link" translatable="false">https://instagram.com/%1$s</string>
    <string name="person_wiki" translatable="false">https://en.wikipedia.org/w/index.php?search=%1$s</string>
    <string name="person_imdb" translatable="false">https://www.imdb.com/name/%1$s</string>
    <string name="imdb_link" translatable="false">https://www.imdb.com/title/%1$s</string>
    <string name="movie_imdb" translatable="false">https://www.imdb.com/title/%1$s</string>
    <string name="filmow_url" translatable="false">https://filmow.com/buscar/?year_start=&amp;year_end=&amp;other_seen_user=&amp;other_want_see_user=&amp;q=%1$s&amp;order=boost</string>
    <string name="netflix_link" translatable="false">https://www.netflix.com/search?q=%1$s</string>
    <string name="google_play_link" translatable="false">https://play.google.com/store/search?q=%1$s&amp;c=movies&amp;hl=%2$s</string>
    <string name="imdb_reviews_link" translatable="false">https://www.imdb.com/title/%1$s/reviews</string>
    <string name="tomatoes_reviews_link" translatable="false">%1$s/reviews</string>
    <string name="metacritic_link" translatable="false">http://www.metacritic.com/search/all/%1$s/results</string>
    <string name="youtube_link" translatable="false">"https://img.youtube.com/vi/%1$s/0.jpg"</string>
    <string name="url_image" translatable="false">http://image.tmdb.org/t/p/%1$s/%2$s</string>
    <string-array name="person_gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="movie_detail_tab_array">
        <item>Summary</item>
        <item>Media</item>
    </string-array>
    <string-array name="person_carrer_tab_array">
        <item>Summary</item>
        <item>Career</item>
    </string-array>
    <string-array name="search_tab_array">
        <item>Movies</item>
        <item>Persons</item>
    </string-array>
    <plurals name="number_of_films">
        <item quantity="one">Movie</item>
        <item quantity="other">Movies</item>
    </plurals>
    <plurals name="number_of_fotos_person">
        <item quantity="one">Picture</item>
        <item quantity="other">Pictures</item>
    </plurals>
    <plurals name="number_of_year">
        <item quantity="one">Year</item>
        <item quantity="other">Years</item>
    </plurals>
    <plurals name="number_of_month">
        <item quantity="one">Month</item>
        <item quantity="other">Months</item>
    </plurals>
    <plurals name="number_of_days">
        <item quantity="one">Day</item>
        <item quantity="other">Days</item>
    </plurals>
    <plurals name="number_of_hours">
        <item quantity="one">Hour</item>
        <item quantity="other">Hours</item>
    </plurals>
    <plurals name="number_of_minute">
        <item quantity="one">Minute</item>
        <item quantity="other">Minutes</item>
    </plurals>
    <string name="genere_action">Action</string>
    <string name="genere_adventure">Adventure</string>
    <string name="genere_animation">Animation</string>
    <string name="genere_comedy">Comedy</string>
    <string name="genere_crime">Crime</string>
    <string name="genere_documentary">Documentary</string>
    <string name="genere_drama">Drama</string>
    <string name="genere_family">Family</string>
    <string name="genere_fantasy">Fantasia</string>
    <string name="genere_history">History</string>
    <string name="genere_horror">Horror</string>
    <string name="genere_music">Music</string>
    <string name="want_see">Want to see</string>
    <string name="dont_want_see">Don\'t want to see</string>
    <string name="edit_perfil_nome">Name</string>
    <string name="edit_perfil_decription_hint">Write something about you</string>
    <string name="edit_perfil_decription_description">Write something about you</string>
    <string name="edit_perfil_decription_title">Description</string>
    <string name="edit_perfil_birthday">Birthday</string>
    <string name="edit_perfil_nome_description">Your name</string>
    <string name="edit_perfil_birthday_description">Choice your Birthday date</string>
    <string name="edit_perfil_country_description">Choice your place of birth</string>
    <string name="edit_perfil_gender_description">Choice your gender</string>
    <string name="edit_perfil_camera_description">Take a picture for your profile</string>
    <string name="lanc_sem_btn_previous_week_description">See releases movies from the previous week</string>
    <string name="login_facebook_title">Login with facebook</string>
    <string name="login_twitter_title">Login with Twitter</string>
    <string name="login_facebook_description">Login with facebook</string>
    <string name="login_twitter_description">Login with Twitter</string>
    <string name="login_google_title">Login with Google</string>
    <string name="login_google_description">Login with Google</string>
    <string name="login_name">Nome</string>
    <string name="login_email" translatable="false">Email</string>
    <string name="login_password">Senha</string>
    <string name="login_confirm_password">Confirmar senha</string>
    <string name="sign_in_link">Já possui cadastro? Login in agora!</string>
    <string name="sign_up_button">Registrar</string>
    <string name="error_confirm_password">Senha e Confirmar senha não conferem</string>
</resources>