<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_group_basico"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_assistidos"
            android:icon="@drawable/ic_assistidos"
            android:title="@string/menu_assistidos" />
        <item
            android:id="@+id/menu_generos"
            android:icon="@drawable/ic_genre"
            android:title="@string/menu_generos" />
        <item
            android:id="@+id/menu_atores"
            android:icon="@drawable/ic_actor"
            android:title="@string/menu_atores" />
        <item
            android:id="@+id/menu_buscar"
            android:icon="@drawable/ic_search_menu"
            android:title="@string/menu_search" />

    </group>

    <group
        android:id="@+id/menu_group_opcoes"
        android:checkableBehavior="none">
            <item
                android:id="@+id/menu_configuracoes"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_configuracoes" />
            <item
                android:id="@+id/menu_sobre"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_sobre" />
        <item
            android:id="@+id/menu_sair"
            android:icon="@drawable/ic_sair"
            android:title="@string/menu_sair" />
    </group>

</menu>
