<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordenation_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_logo_margin_bottom"
            android:orientation="vertical">

            <br.com.tiagohs.popmovies.ui.tools.PopTextView
                android:id="@+id/title_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/txt_login_app_name"
                app:font="@string/font_open_sans"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_facebook_button"
            style="@style/LoginButtonStyle"
            android:background="@drawable/button_facebook"
            android:text="@string/login_facebook_title"
            android:contentDescription="@string/login_facebook_description"
            android:drawableStart="@drawable/ic_facebook"/>

        <Button
            android:id="@+id/login_twitter_button"
            style="@style/LoginButtonStyle"
            android:background="@drawable/button_twitter"
            android:text="@string/login_twitter_title"
            android:contentDescription="@string/login_twitter_description"
            android:drawableStart="@drawable/ic_twitter_logo" />

        <Button
            android:id="@+id/login_google_button"
            style="@style/LoginButtonStyle"
            android:textColor="@color/secondary_text"
            android:background="@drawable/button_google"
            android:text="@string/login_google_title"
            android:contentDescription="@string/login_google_description"
            android:drawableStart="@drawable/ic_google_logo" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_facebook_button_original"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/login_twitter_button_original"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>