<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        android:right="10dp"
        android:icon="@drawable/ic_save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_go_gallery"
        android:orderInCategory="100"
        android:title="@string/action_go_gallery"
        android:right="10dp"
        android:icon="@drawable/ic_gallery"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_compartilhar"
        app:showAsAction="always"/>

</menu>