<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordenation_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_logo_margin_bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"/>

        </LinearLayout>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/login_name"
            android:inputType="textEmailAddress"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_confirm_password"
            android:inputType="textPassword"
            style="@style/EditTextStyle"/>

        <br.com.tiagohs.popmovies.ui.tools.PopTextView
            android:id="@+id/error_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:visibility="gone"
            android:text="@string/error_confirm_password"
            app:font="@string/font_open_sans"
            style="@style/ErrorFormStyle"/>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default_medium"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/background_item_words_default"
            app:mrl_rippleColor="@color/itemBackgroundRiple"
            app:mrl_rippleOverlay="true">

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/LancamentoSemanaButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:contentDescription="@string/lanc_sem_btn_previous_week_description"
                android:text="@string/sign_up_button"/>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            app:mrl_rippleColor="@color/floating_normal"
            android:layout_gravity="center_horizontal"
            app:mrl_rippleOverlay="true">

            <br.com.tiagohs.popmovies.ui.tools.PopTextView
                android:id="@+id/title_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_link"
                android:textSize="@dimen/txt_size_medium"
                android:layout_gravity="center"
                app:font="@string/font_open_sans"
                android:textColor="@android:color/white" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>