<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="fill_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <include layout="@layout/include_circle_picture_medium" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/imdb_reviews_riple"
                app:mrl_rippleColor="@color/colorPrimaryDark"
                app:mrl_rippleBackground="@color/color_estatistica_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleOverlay="true">

                <ImageButton
                    android:id="@+id/btn_photo"
                    android:layout_width="@dimen/perfil_camera_width"
                    android:layout_height="@dimen/perfil_camera_height"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/edit_perfil_camera_description"
                    android:src="@drawable/ic_camera"/>

            </com.balysv.materialripple.MaterialRippleLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/edit_name"
                style="@style/EditPerfilOptionStyle"
                android:hint="@string/edit_perfil_nome"
                android:contentDescription="@string/edit_perfil_nome_description"
                android:maxLength="@integer/max_lenth_edit"
                android:drawableLeft="@drawable/ic_perfil"
                android:focusable="true" />

            <EditText
                android:id="@+id/edit_birthday"
                style="@style/EditPerfilOptionStyle"
                android:drawableLeft="@drawable/ic_birthday"
                android:contentDescription="@string/edit_perfil_birthday_description"
                android:hint="@string/edit_perfil_birthday"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/EditPerfilOptionImageStyle"
                    android:src="@drawable/ic_locale"/>

                <Spinner
                    android:id="@+id/edit_country"
                    style="@style/EditPerfilOptionStyle"
                    android:contentDescription="@string/edit_perfil_country_description"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/EditPerfilOptionImageStyle"
                    android:src="@drawable/ic_gender"/>

                <Spinner
                    android:id="@+id/edit_gender"
                    style="@style/EditPerfilOptionStyle"
                    android:contentDescription="@string/edit_perfil_gender_description"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            </LinearLayout>

        </LinearLayout>

        <View style="@style/DividerLargeStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_marginTop="@dimen/margin_default_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_size_small"
                android:textColor="@android:color/black"
                android:layout_marginLeft="@dimen/margin_default_min"
                android:text="@string/edit_perfil_decription_title"/>

            <EditText
                android:id="@+id/edit_descricao"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_perfil_description_height"
                android:textSize="@dimen/txt_size_medium"
                android:hint="@string/edit_perfil_decription_hint"
                android:contentDescription="@string/edit_perfil_decription_description"
                android:maxLength="200"
                android:inputType="text|textMultiLine"
                android:gravity="top"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>