<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_quero_ver"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/movie_detail_button_height"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_quero_ver"
            android:drawablePadding="@dimen/movie_detail_icon_padding"
            android:text="@string/want_see"
            style="@style/ButtonsUserOptions" />

        <ImageButton
            android:id="@+id/btn_favorito"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/movie_detail_button_height"
            android:drawablePadding="@dimen/movie_detail_icon_padding"
            android:layout_gravity="center"
            android:src="@drawable/ic_favorite_border"
            style="@style/ButtonsUserOptions" />

        <Button
            android:id="@+id/btn_nao_quero_ver"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/movie_detail_button_height"
            android:drawablePadding="@dimen/movie_detail_icon_padding"
            android:layout_gravity="center"
            android:drawableRight="@drawable/ic_nao_quero_ver"
            android:text="@string/dont_want_see"
            style="@style/ButtonsUserOptions" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin_default_medium"
        android:layout_marginRight="@dimen/margin_default_medium">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/riple_imdb"
            app:mrl_rippleColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mrl_rippleOverlay="true"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_imdb"
                android:layout_width="wrap_content"
                android:maxWidth="@dimen/movie_detail_button_width"
                android:layout_height="@dimen/movie_detail_button_height"
                android:layout_marginRight="@dimen/margin_default_min"
                android:layout_gravity="center"
                style="@style/ButtonsUserOptions"
                android:text="@string/imdb"/>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/riple_filmow"
            app:mrl_rippleColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mrl_rippleOverlay="true"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_filmow"
                android:layout_width="wrap_content"
                android:maxWidth="@dimen/movie_detail_button_width"
                android:layout_height="@dimen/movie_detail_button_height"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_default_min"
                style="@style/ButtonsUserOptions"
                android:text="@string/filmow"/>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/riple_wiki"
            app:mrl_rippleColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mrl_rippleOverlay="true"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_wiki"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/movie_detail_button_height"
                android:maxWidth="@dimen/movie_detail_button_width"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_default_min"
                style="@style/ButtonsUserOptions"
                android:text="@string/wiki"/>

        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/riple_pagina_inicial"
            app:mrl_rippleColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mrl_rippleOverlay="true"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_pagina_inicial"
                android:layout_width="wrap_content"
                android:minWidth="@dimen/movie_detail_page_min_width"
                android:layout_height="@dimen/movie_detail_button_height"
                android:layout_gravity="center"
                android:text="@string/pagina_inicial"
                style="@style/ButtonsUserOptions"/>

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>
</merge>